fix: fix code smells